defconfig: regen and build-in wifi

--- a/arch/arm/configs/cyanogenmod_tf701t_defconfig
+++ b/arch/arm/configs/cyanogenmod_tf701t_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.57 Kernel Configuration
+# Linux/arm 3.4.82 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -1046,7 +1046,7 @@ CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
 CONFIG_WEXT_CORE=y
 CONFIG_WEXT_PROC=y
-CONFIG_CFG80211=m
+CONFIG_CFG80211=y
 CONFIG_NL80211_TESTMODE=y
 # CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
 # CONFIG_CFG80211_REG_DEBUG is not set
@@ -1324,6 +1324,7 @@ CONFIG_SCSI_LOWLEVEL=y
 # CONFIG_ATA is not set
 CONFIG_MD=y
 # CONFIG_BLK_DEV_MD is not set
+CONFIG_BLK_DEV_DM_BUILTIN=y
 CONFIG_BLK_DEV_DM=y
 # CONFIG_DM_DEBUG is not set
 CONFIG_DM_CRYPT=y
@@ -1570,7 +1571,7 @@ CONFIG_WLAN=y
 # CONFIG_BCMDHD_CFG80211 is not set
 # CONFIG_DHD_USE_STATIC_BUF is not set
 # CONFIG_DHD_USE_SCHED_SCAN is not set
-CONFIG_BCM43XX=m
+CONFIG_BCM43XX=y
 CONFIG_BCM43XX_FW_PATH="/vendor/firmware/bcm43341/fw_bcmdhd.bin"
 CONFIG_BCM43XX_NVRAM_PATH="/data/misc/wifi/nvram.txt"
 CONFIG_BCM43XX_WIFI_CONTROL_FUNC=y
