--- a/arch/arm/configs/cyanogenmod_tf701t_defconfig
+++ b/arch/arm/configs/cyanogenmod_tf701t_defconfig
@@ -1568,15 +1568,29 @@ CONFIG_WLAN=y
 # CONFIG_USB_NET_RNDIS_WLAN is not set
 # CONFIG_WIFI_CONTROL_FUNC is not set
 # CONFIG_ATH_COMMON is not set
-# CONFIG_BCMDHD is not set
+CONFIG_BCMDHD=y
+# CONFIG_BCM43341 is not set
+# CONFIG_BCM43241 is not set
+CONFIG_BCMDHD_FW_PATH="/vendor/firmware/bcm43341/fw_bcmdhd.bin"
+CONFIG_BCMDHD_NVRAM_PATH="/data/misc/wifi/nvram.txt"
 # CONFIG_BCMDHD_CFG80211 is not set
+CONFIG_BCMDHD_HW_OOB=y
+CONFIG_BCMDHD_INSMOD_NO_FW_LOAD=y
+CONFIG_BCMDHD_EDP_SUPPORT=y
 # CONFIG_DHD_USE_STATIC_BUF is not set
 # CONFIG_DHD_USE_SCHED_SCAN is not set
-CONFIG_BCM43XX=y
-CONFIG_BCM43XX_FW_PATH="/vendor/firmware/bcm43341/fw_bcmdhd.bin"
-CONFIG_BCM43XX_NVRAM_PATH="/data/misc/wifi/nvram.txt"
-CONFIG_BCM43XX_WIFI_CONTROL_FUNC=y
-CONFIG_BCM43XX_EDP_SUPPORT=y
+CONFIG_BCMDHD_WIFI_CONTROL_FUNC=y
+CONFIG_BCMDHD_CUSTOM_REGULATORY_DOMAIN=y
+# CONFIG_BCMDHD_DISABLE_P2P_SYSFS_DEVICE_NODE is not set
+CONFIG_BCMDHD_CLAIM_BCM4325_SDGWB=y
+CONFIG_BCMDHD_CLAIM_BCM4325=y
+CONFIG_BCMDHD_CLAIM_BCM4319=y
+CONFIG_BCMDHD_CLAIM_BCM4330=y
+CONFIG_BCMDHD_CLAIM_BCM4334=y
+CONFIG_BCMDHD_CLAIM_BCM4324=y
+CONFIG_BCMDHD_CLAIM_BCM43239=y
+CONFIG_BCMDHD_CLAIM_SDIO_CLASS_NONE=y
+# CONFIG_BCM43XX is not set
 # CONFIG_BCM4335 is not set
 # CONFIG_BRCMFMAC is not set
 # CONFIG_SD8797 is not set
